# fastapi-monitoring-and-observability

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  locustfile.py  pyproject.toml
app/: database.py  logging_config.py  main.py
app/models/: item.py
app/monitoring/: metrics.py
app/routes/: items.py
app/services/: item_service.py
docs/: OBSERVABILITY_WATCH.md
fastapi_monitoring_and_observability.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
prometheus/: prometheus.yml
tools/seed_worker/: Dockerfile  requirements.txt  worker.py
