[project]
name = "fastapi-monitoring-and-observability"
version = "0.0.1"
description = "A FastAPI project template with monitoring and observability features"
dependencies = [
    "fastapi>=0.127.0",
    "prometheus-client>=0.23.1",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.40.0",
    "virtualenv>=20.35.4",
]
