[project]
name = "fastapi-monitoring-and-observability"
version = "0.0.1"
description = "A FastAPI project template with monitoring and observability features"
dependencies = [
    "faker>=39.0.0",
    "fastapi>=0.127.0",
    "httpx>=0.28.1",
    "locust>=2.42.6",
    "prometheus-client>=0.23.1",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "psycopg2-binary>=2.9.11",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.40.0",
    "virtualenv>=20.35.4",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app"]
